--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,4 @@ resources/sass/.sass-cache/
 resources/.arch-internal-preview.css
 .arch-internal-preview.css
 node_modules
-
-node_modules/
+package-lock.json
