--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ resources/sass/.sass-cache/
 resources/.arch-internal-preview.css
 .arch-internal-preview.css
 node_modules
-package-lock.json
+.package-lock.json
